--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Debmalya Sen",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
